<resources>
    <string name="app_name">Seg2105</string>
    <string name="fitness">fitness</string>
    <string name="getStarted">Get Started!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="back">back</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="goto_login">Already Have an Account?</string>
    <string name="username">Enter Username</string>
    <string name="age">Enter Age</string>
    <string name="phoneNum">Enter Phone Number</string>
    <string name="whory">Who Are You?</string>
    <string name="r_instructor">Are you an instructor?</string>
    <string name="enter_username">Enter Username</string>
    <string name="delete_user">Delete a User</string>
    <string name="edit_cla">Edit a Class</string>
    <string name="add_cla">Add a Class</string>
    <string name="viewcus">View All Gym Members</string>
    <string name="viewins">View All Instructions</string>
    <string name="delecus">Delete a Gym Member</string>
    <string name="deleins">Delete a Instruction</string>
    <string name="cusID">Gym Member ID:</string>
    <string name="insID">Instructor ID:</string>
    <string name="create_class">Create a Class:</string>
    <string name="view_enroll">VIEW ENROLLED CLASSES</string>
    <string name="sbn">searchbyname</string>
    <string name="sbd">searchbydow</string>

    <string-array name="classType">
        <item>Yoga</item>
        <item>Cardio</item>
        <item>Weight Lifting</item>
    </string-array>

    <string-array name="difficultyType">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string-array name="dayOfWeek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


</resources>